smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/control-statement-before-others.smithy
// A control statement must come before any namespace, metadata, or shape
namespace foo.baz

$version: "0.5.0"
